# nse-trading-intelligence

./: .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
dashboard/: app.py
docs/: CHANGELOG_PLAN_V2.md  MASTER_PLAN.md  MASTER_PLAN_REVIEW.md
docs/phase-0/: ADR.md
docs/phase-1/: DATA_ARCHITECTURE_AND_DB_SCHEMA.md
docs/phase-1a/: FINDINGS.md  WALKING_SKELETON_SCOPE.md
docs/phase-2/: CALCULATOR_SPECIFICATION_CATALOGUE.md
docs/phase-3/: FEATURE_AND_SCORING_DESIGN.md
docs/phase-4/: BACKTESTING_ENGINE_DESIGN.md
docs/phase-5/: RISK_ENGINE_DESIGN.md
docs/phase-6/: DASHBOARD_AND_FORWARD_TRACKING_DESIGN.md
migrations/: 001_schemas_and_extensions.sql  002_reference_core.sql  003_raw_and_curated.sql  004_fix_contracts_natural_key_nulls.sql
scripts/: backfill.py  load_curated.py  migrate.py  probe_historical_access.py  seed_reference.py  verify_v1_v2.py  verify_v3_v5_v6.py
src/calculators/framework/: base.py
src/fetch/: nse_client.py  sources.py
src/foundation/: config.py
src/ingestion/: loaders.py  parsers.py
src/reference/: universe_builder.py
src/storage/: repositories.py
tests/unit/: test_calculators_core.py  test_universe_builder.py
