[project]
name = "nse-trading-intelligence"
version = "0.1.0"
description = "Institutional Trading Intelligence Platform (NSE) — EOD decision support for swing and positional trading"
requires-python = ">=3.11"

dependencies = [
    "requests>=2.32",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
